change install check to push

--- a/.github/workflows/install_check.yml
+++ b/.github/workflows/install_check.yml
@@ -2,12 +2,7 @@
 name: Install Check
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches:
-            - main
+    [push]
 
 jobs:
     install_check:
