--- a/.github/workflows/install_check.yml
+++ b/.github/workflows/install_check.yml
@@ -20,6 +20,7 @@ jobs:
             cp ./repos.yaml /usr/local/src/mirte/repos.yaml
             cp -r ./* /usr/local/src/mirte/mirte-install-scripts/
             cp ./settings.sh /usr/local/src/mirte/settings.sh
+            echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections
             sudo rm $(which service)
             sudo rm $(which systemctl)
             touch /usr/bin/service
