Update mirte-telemetrix-cpp branch

--- a/repos.yaml
+++ b/repos.yaml
@@ -46,5 +46,5 @@ repositories:
   mirte-telemetrix-cpp:
     type: git
     url: https://github.com/SuperJappie08/mirte-telemetrix-cpp.git
-    version: main
+    version: mirte-pioneer
     recursive: true
