--- a/nginx.conf
+++ b/nginx.conf
@@ -54,7 +54,7 @@ server {
     location /ws/ros {
        include /etc/nginx/nginx_login.conf;
 
-        proxy_pass http://localhost:9090;
+        proxy_pass http://localhost:9090/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
