--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -42,4 +42,5 @@ jobs:
         sudo apt update
         cd $MIRTE_SRC_DIR/mirte-install-scripts/
         sudo sed -i '/systemctl/d' install_ROS2.sh # remove systemctl command as it is not available in the github runner/container
+        sudo apt install libunwind-dev -y
         sudo ./install_ROS2.sh
