ros2 install ubu22.04 ci

--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -25,7 +25,7 @@ jobs:
         sudo ./install_arduino.sh
 
   ros2-install:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         type: [mirte, mirte-master]
