test2 ros install mirte-master

--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -45,5 +45,5 @@ jobs:
         cd $MIRTE_SRC_DIR/mirte-install-scripts/
         sudo sed -i '/systemctl/d' install_ROS2.sh # remove systemctl command as it is not available in the github runner/container
         sudo apt install libunwind-dev -y
-        export MIRTE_TYPE=${{ matrix.type }}
-        sudo ./install_ROS2.sh
+        MIRTE_TYPE=${{ matrix.type }}
+        sudo . ./install_ROS2.sh
