--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -8,7 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: |
+    - shell: bash
+      run: |
         mkdir -p /etc/udev/rules.d/ # just for testing, folder should just exist on the real image
         sudo useradd -m -s /bin/bash mirte 
         MIRTE_SRC_DIR=/usr/local/src/mirte
@@ -31,7 +32,8 @@ jobs:
         type: [mirte, mirte-master]
     steps:
     - uses: actions/checkout@v4
-    - run: |
+    - shell: bash
+      run: |
         sudo useradd -m -s /bin/bash mirte 
         MIRTE_SRC_DIR=/usr/local/src/mirte
         sudo mkdir -p $MIRTE_SRC_DIR
