Fix shutdown always triggering

--- a/services/mirte-shutdown.service
+++ b/services/mirte-shutdown.service
@@ -3,6 +3,7 @@ Description=Mirte-shutdown
 After=mirte-ros.service
 
 [Service]
+User=mirte
 Type=oneshot
 RemainAfterExit=true
 ExecStart=/usr/local/src/mirte/mirte-install-scripts/services/mirte_boot.sh
